--- a/visualc14/glutapp3d.vcxproj
+++ b/visualc14/glutapp3d.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="..\gsim\gs_vec2.cpp" />
     <ClCompile Include="..\ogl_tools.cpp" />
     <ClCompile Include="..\so_model.cpp" />
+    <ClCompile Include="..\so_stats.cpp" />
     <ClCompile Include="..\so_superquadric.cpp" />
     <ClCompile Include="..\so_texturedTube.cpp" />
   </ItemGroup>
@@ -163,6 +164,7 @@
     <ClInclude Include="..\gsim\gs_vec2.h" />
     <ClInclude Include="..\ogl_tools.h" />
     <ClInclude Include="..\so_model.h" />
+    <ClInclude Include="..\so_stats.h" />
     <ClInclude Include="..\so_superquadric.h" />
     <ClInclude Include="..\so_texturedTube.h" />
   </ItemGroup>
